# fact-cheker

./: .gitignore  docker-compose.yml
crawler/: .dockerignore  Cargo.toml  Dockerfile  newspapers.json
crawler/src/: main.rs  newspaper.rs
factcheker/: .dockerignore  .env.example  Dockerfile  manage.py  requirements.txt  start.sh
factcheker/conf/: settings.py  urls.py
factcheker/core/: checker.py  models.py  views.py
factcheker/core/migrations/: 0001_initial.py
factcheker/core/views/: __init__.py  auth.py  checker.py  search.py  user.py
tests/: checker.py
web-app/: Dockerfile  nuxt.config.ts  package-lock.json  package.json  tailwind.config.js
web-app/assets/css/: main.css
web-app/composable/: fetch.ts
web-app/layouts/: default.vue
web-app/middleware/: auth.ts
web-app/pages/: check.vue  index.vue  login.vue  register.vue  search.vue
web-app/plugins/: initUser.ts
web-app/server/middleware/: proxy.ts
web-app/store/: auth.ts  user.ts
