[package]
name = "crawler"
version = "0.1.0"
edition = "2021"

[dependencies]
spider = {version = "2.2.5", features = ["ua_generator", "control", "jemalloc", "fs", "cache", "real_browser", "encoding"] }
tokio = { version = "1.34.0", features = ["full"] }
scraper = "0.20.0"
serde = "1.0.209"
serde_json = "1.0.127"
meilisearch-sdk = "0.27.1"
futures = "0.3"
env_logger = "0.11.5"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
