[package]
name = "crawler"
version = "0.1.0"
edition = "2021"

[dependencies]
spider = { git = "https://github.com/DimitriTimoz/spider",  default-features = false, features = [
    "ua_generator",
    "control", 
    "jemalloc", 
    "fs", 
    "cache", 
    "real_browser", 
    "encoding", 
    "reqwest_rustls_tls", 
    "sync"] }
tokio = { version = "1.34.0", features = ["full"] }
scraper = "0.20.0"
serde = "1.0.209"
serde_json = "1.0.127"
serde_derive = "1.0.209"
meilisearch-sdk = { git = "https://github.com/meilisearch/meilisearch-rust.git" }
futures = "0.3.30"
